--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==3.0.2
-firebase-admin==6.4.0
-pandas==2.2.1
-python-dotenv==1.0.1 
+Flask==2.0.1
+firebase-admin==5.0.3
+pandas==1.3.3
+python-dotenv==0.19.0
+gunicorn==20.1.0
+werkzeug==2.0.1 
