--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,8 @@ firebase-admin==5.0.3
 pandas==1.3.3
 python-dotenv==0.19.0
 gunicorn==20.1.0
-werkzeug==2.0.1 
+werkzeug==2.0.1
+click==8.0.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1 
