--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,6 @@ click==8.0.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
-numpy==1.21.0 
+numpy==1.21.0
+setuptools>=51.0.0
+wheel>=0.36.0 
